PCS BAckup 26Dec2023/Backup-Source/objects/GCP_Product_Family_Map__c.object
<CustomObject>
    <fields>
        <fullName>GCP_Product_Family__c</fullName>
        <label>GCP Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SULFADIAZINE 1 CREAM</fullName>
                </value>
                <value>
                    <fullName>HABITROL PATCH</fullName>
                </value>
                <value>
                    <fullName>FENOFIBRATE CAPS</fullName>
                </value>
                <value>
                    <fullName>RANITIDINE CAPS</fullName>
                </value>
                <value>
                    <fullName>FEBUXOSTAT</fullName>
                </value>
                <value>
                    <fullName>PEMETREXED DISODIUM LYO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_Product_Family_Code__c</fullName>
        <label>SFDC Product Family Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Product_Family__c</fullName>
        <label>SFDC Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SSD Cream</fullName>
                </value>
                <value>
                    <fullName>Fenofibrate Capsules</fullName>
                </value>
                <value>
                    <fullName>Ranitidine Caps</fullName>
                </value>
                <value>
                    <fullName>Febuxostat</fullName>
                </value>
                <value>
                    <fullName>Naproxen Sodium</fullName>
                </value>
                <value>
                    <fullName>Pemetrexed for Injection</fullName>
                </value>
                <value>
                    <fullName>Fesoterodine</fullName>
                </value>
                <value>
                    <fullName>Sorafenib</fullName>
                </value>
                <value>
                    <fullName>Nicotine Lozenge Original</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>GCP Product Family Map</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GCP_Product_Family__c</columns>
        <columns>SFDC_Product_Family__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>GCP_Product_Family__c</columns>
        <columns>SFDC_Product_Family__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All2</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GCPFamilyMap-{0000000}</displayFormat>
        <label>GCP Product Family Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GCP Product Family Map</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>